fix footer background contrast

--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #f17941;
+    background-color: #A32C00;
 }
 
 .tc-orange {
